# whoogle-search

./: Dockerfile.mcp  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt
app/: routes.py  version.py
app/models/: config.py
app/templates/: index.html
app/utils/: misc.py
