[project]
name = "whoogle"
version = "0.1.0"
dependencies = [
    "tavily-python>=0.7.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = [
  "E", "F", "W",  # pycodestyle/pyflakes
  "I",              # isort
]
lint.ignore = []

[tool.black]
line-length = 100
target-version = ['py311']

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.16.0",
    "requests>=2.32.5",
    "beautifulsoup4==4.13.5"
]
